deploy/k8s/node.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-express
  namespace: test
spec:
  clusterIP: None
  ports:
    - name: node-express
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: node-express
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: node-express
  namespace: test
  labels:
    app: node-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-express
  template:
    metadata:
      labels:
        app: node-express
    spec:
      containers:
        - name: node
          image: node-express
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
