deploy/k8s/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-httpbin
  namespace: test
spec:
  ingressClassName: nginx
  rules:
    - host: node-express.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-express
                port:
                  number: 3000
